[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Images/button_off.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/button_on.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 9 )

[node name="Button" type="RigidBody2D"]
mode = 1
script = ExtResource( 3 )

[node name="OffSprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="OffCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="OnSprite" type="Sprite" parent="."]
visible = false
rotation = 1.5708
texture = ExtResource( 2 )

[node name="OnCollision" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
